video controls on for mobile & fix mobile header cutoff

--- a/app/static/styles/media-queries.css
+++ b/app/static/styles/media-queries.css
@@ -13,6 +13,7 @@
     .social-nav-mobile {
         display: flex;
         justify-content: center;
+        margin-bottom: 15px;
     }
 
     #mobile-title {
